Ajusta texto do botão de notificações

--- a/assignments/templates/assignments/index.html
+++ b/assignments/templates/assignments/index.html
@@ -19,7 +19,7 @@
                     PDF
                 </a>
                 <button id="webpush-subscribe-button" class="btn btn-main mb-4 ml-0 md:ml-2" data-url="/designacoes/webpush/save_information">
-                    {% trans 'Subscribe to Push Messaging' %}
+                    Receber notificações
                 </button>
                 <a href="{% url 'assignments.logout' %}"
                    class="block btn bg-shade-dark-700 text-main-50 hover:bg-shade-dark-800 ml-0 md:ml-2 mb-4 text-center">
