--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -25,7 +25,7 @@
     }
 
     .assignment-card.next-meeting {
-        @apply border-4 border-white
+        @apply border-4 border-accent-light dark:border-white
     }
 
     .title {
