--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -1,4 +1,4 @@
-{% load static tailwind_tags webpush_notifications i18n pwa %}
+{% load static tailwind_tags webpush_notifications i18n pwa load_env %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -16,7 +16,64 @@
             <meta name="user_id" content="{{ user.id }}">
         {% endif %}
 		{% tailwind_css %}
-        {% progressive_web_app_meta %}
+
+        <link rel="manifest" href="{% get_env_var 'BASE_URL' %}/manifest.json">
+        <!-- Add to homescreen for Chrome on Android -->
+        <meta name="mobile-web-app-capable" content="yes">
+        <meta name="application-name" content="{{ PWA_APP_NAME }}">
+
+
+        <!-- Chrome for Android theme color -->
+        <meta name="theme-color" content="{{ PWA_APP_THEME_COLOR }}">
+
+        <!-- Add to homescreen for Safari on iOS -->
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-title" content="{{ PWA_APP_NAME }}">
+        <meta name="apple-mobile-web-app-status-bar-style" content="{{ PWA_APP_STATUS_BAR_COLOR }}">
+
+        {% if PWA_APP_ICONS_APPLE %}
+            {% for icon in PWA_APP_ICONS_APPLE %}
+                <link rel="apple-touch-icon" href="{{ icon.src }}" sizes="{{ icon.size }}">
+            {% endfor %}
+        {% else %}
+            {% for icon in PWA_APP_ICONS %}
+                <link rel="apple-touch-icon" href="{{ icon.src }}" sizes="{{ icon.size }}">
+            {% endfor %}
+        {% endif %}
+
+
+        {% for splash in PWA_APP_SPLASH_SCREEN %}
+        <link href="{{ splash.src }}" media="{{ splash.media }}" rel="apple-touch-startup-image"/>
+        {% endfor %}
+
+
+        <!-- Tile for Win8 -->
+        <meta name="msapplication-TileColor" content="{{ PWA_APP_BACKGROUND_COLOR }}">
+        {% with PWA_APP_ICONS|last as icon %}
+        <meta name="msapplication-TileImage" content="{{ icon.src }}">
+
+
+        <link rel="icon" sizes="{{ icon.size }}" href="{{ icon.src }}">
+
+        <script type="text/javascript">
+            // Initialize the service worker
+            if ('serviceWorker' in navigator) {
+                navigator.serviceWorker.register('{% get_env_var 'BASE_URL' %}/serviceworker.js', {
+                    scope: '{{ PWA_APP_SCOPE }}'
+                }).then(function (registration) {
+                    // Registration was successful
+                    {% if PWA_APP_DEBUG_MODE %}
+                    console.log('django-pwa: ServiceWorker registration successful with scope: ', registration.scope);
+                    {% endif %}
+                }, function (err) {
+                    // registration failed :(
+                    {% if PWA_APP_DEBUG_MODE %}
+                    console.log('django-pwa: ServiceWorker registration failed: ', err);
+                    {% endif %}
+                });
+            }
+        </script>
+        {% endwith %}
         <link href="{% static 'fontawesomefree/css/fontawesome.css' %}" rel="stylesheet" type="text/css">
         <link href="{% static 'fontawesomefree/css/solid.css' %}" rel="stylesheet" type="text/css">
         <link href="{% static 'assets/remix-icon/remixicon.css' %}" rel="stylesheet" type="text/css">
